# trailer-edit

./: .gitignore  Dockerfile  app.py  edit.py  main.py  pyproject.toml
.github/workflows/: docker-build.yml
static/css/: style.css
static/js/: app.js
templates/: index.html  upload.html
