[project]
name = "trailer-edit"
version = "1.0.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.0",
    "scenedetect[opencv]>=0.6.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "bump-my-version>=1.1.2",
    "isort>=6.0.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "app.py"
